<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity"
    android:background="@drawable/background_heater"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="395dp"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heater_settings"
            android:textSize="27sp"
            android:drawableBottom="@drawable/underline"
            android:textColor="#FFFF"
            android:id="@+id/heading"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#ffff"
            android:text="@string/device_name1"
            android:layout_marginTop="20dp"
            android:id="@+id/name_text_view_heater"
            android:layout_below="@id/heading"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_text_view_heater"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#ffff"
            android:drawableBottom="@drawable/underline"
            android:hint="@string/enter_some_text"
            android:id="@+id/device_name_input_heater"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/device_name_input_heater"
            android:orientation="horizontal"
            android:id="@+id/relative_layout_mode_heater">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_mode1"
            android:textColor="#ffff"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:id="@+id/mode_text_view_heater"
            android:drawableBottom="@drawable/underline"
            tools:ignore="RelativeOverlap" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="13dp"
            android:layout_alignParentEnd="true"
            android:id="@+id/device_mode_switch_heater"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/relative_layout_mode_heater">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="#ffff"
                android:text="@string/device_temperature"
                android:textSize="22sp"
                tools:ignore="RelativeOverlap" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:id="@+id/device_number_picker_heater"/>

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            app:cornerRadius="15dp"
            android:textColor="#ffff"
            android:id="@+id/action_ok_heater"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.button.MaterialButton

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:textColor="#ffff"
            android:id="@+id/action_cancel_heater"/>

    </RelativeLayout>



</RelativeLayout>