<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/check_box_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/lights_device_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="15dp"
            android:checked="true"

            android:text="@string/lights" />

        <CheckBox
            android:id="@+id/heaters_device_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_centerHorizontal="true"
            android:checked="true"

            android:text="@string/heaters" />

        <CheckBox
            android:id="@+id/roller_shutter_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:checked="true"
            android:layout_alignParentEnd="true"

            android:text="@string/roller_shutter"
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_devices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_box_layout"
        android:layout_marginTop="?attr/actionBarSize"
        android:layoutAnimation="@anim/layout_animation"/>
</androidx.constraintlayout.widget.ConstraintLayout>