<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="173dp"
    android:layout_marginStart="30dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="30dp"
    android:orientation="vertical"
    app:cardCornerRadius="14dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_roller_shutter"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/roller_shutter_name"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:text="@string/device_name"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:textColor="#ffff"
                    android:textSize="24sp"/>
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="#ffff"
                    android:textSize="16sp"/>
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/position"
                    android:textColor="#ffff"
                    android:textSize="16sp"/>


            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_roller_shutter"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#ffff"/>


            <TextView
                android:id="@+id/roller_shutter_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20"
                android:textColor="#ffff"
                android:textSize="34sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percentage"
                    android:textSize="23sp"
                    android:textColor="#ffff"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="6dp"/>


            </LinearLayout>




        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>